# tinyCUnit

./: .gitignore  CMakeLists.txt  README.md  automain.py  testRunnerGenerator.py  test_nomain.c  test_nomaincxx.cpp  test_tinyCUnit.c  tinyCUnit.cmake  tinyCUnit.h
src/: CMakeLists.txt
src/include/: tinyCUnit.h  tinyunit.h
tests/: CMakeLists.txt  test_.c  test_A.c  test_A_main.c  test_addCases.c
